# Nuvem

./: .project  dataset.txt  tagcloud.cabal
.dist-buildwrapper/: tagcloud.cabal
.dist-buildwrapper/src/: .Main.hs.bwinfo  .Main.hs.bwusage  Main.hs
src/: Main.hs
