name:           tagcloud
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         andrea

executable tagcloud
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   random,
                   QuickCheck
  ghc-options:     -Wall

